--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="row">Score needed to win:</div>
+                <div class="row"><h6>Score needed to win:</h6></div>
                 <div class="row" id="targetScore"></div>
+                <div class="row"><h6>Current score:</h6></div>
+                <div class="row" id="currentScore">0</div>
             </div>
             <div class="col">
                 <div class="row" id="wins">Wins:</div>
