--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="row" id="currentScore">0</div>
             </div>
             <div class="col">
+                <div class="row"><br></div>
                 <div class="row" id="wins">Wins:</div>
                 <div class="row" id="losses">Losses:</div>
             </div>
