--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <br>
                 The value of each crystal is hidden from you until you click on it.
                 <br>
-                Each time when the game starts, the game will change the values of each crystal.
+                At the start of each game, the value of the crystals will be changed. Good luck!
             </p>
         </div>
         <div class="row">
