javascript updates again

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="row"><h6>Score needed to win:</h6></div>
+                <div class="row">
+                    <h6>Score needed to win:</h6>
+                </div>
                 <div class="row" id="targetScore"></div>
-                <div class="row"><h6>Current score:</h6></div>
+                <div class="row">
+                    <h6>Current score:</h6>
+                </div>
                 <div class="row" id="currentScore">0</div>
             </div>
             <div class="col">
@@ -45,16 +49,16 @@
         </div>
         <div class="row">
             <div id="button-red" class="crystal col">
-                <img src="assets/images/red_crystal.jpg" width = "150px"/>
+                <img src="assets/images/red_crystal.jpg" width="150px" />
             </div>
             <div id="button-purple" class="crystal col">
-                <img src="assets/images/purple_crystal.jpg" width = "150px" />
+                <img src="assets/images/purple_crystal.jpg" width="150px" />
             </div>
             <div id="button-blue" class="crystal col">
-                <img src="assets/images/blue_crystal.jpg" width = "150px" />
+                <img src="assets/images/blue_crystal.jpg" width="150px" />
             </div>
             <div id="button-green" class="crystal col">
-                <img src="assets/images/green_crystal.jpg" width = "150px" />
+                <img src="assets/images/green_crystal.jpg" width="150px" />
             </div>
         </div>
 
